--- a/index.html
+++ b/index.html
@@ -16,19 +16,24 @@
                     <a class="text-blue-600 visited:text-purple-600 a-tag" href="/tag/#" tag="#">ALL</a>
                 </div>
             </div>
-            <div class="w-2/5 bg-gray-300 p-4">
+            <div class="w-2/5 bg-gray-300 p-4 flex flex-col h-screen">
                 <div class="search-container flex flex-col w-full">
                     <div class="flex w-full">
                         <input class="w-4/5 p-2" type="text" placeholder="Search any thing here" />
                     </div>
                 </div>
-                <div class="list-container">
+                <div class="list-container overflow-y-scroll flex-grow">
                     <div id="listView" ></div>
                 </div>
             </div>
-            <div class="w-full bg-gray-400 p-2" id="card-detail-container" card-id="">
+            <div class="w-full bg-gray-400 p-2 h-screen overflow-y-scroll" id="card-detail-container" card-id="">
                 <div class="textview hidden" id="card-view" >
-                    <div class="flex justify-between item-view">
+                    <div class="flex flex-col justify-between item-view">
+                        <div class="top-row border-b mb-3">
+                            <span class="card-id font-bold "></span>
+                            <span class="card-created-at text-gray-63 dark:text-gray-94 px-8"></span>
+                            <span class="card-updated-at text-gray-63 dark:text-gray-94"></span>
+                        </div>
                         <div class="markdown-body"></div>
                     </div>
                     <div>
@@ -47,8 +52,8 @@
                     </div>
                 </div>
                 <div class="editor hidden" id="editor-view">
-                    <div class="flex justify-between item-view">
-                        <textarea class="w-full p-2 edit-area" id="longTextInput" rows="5" placeholder="Enter your long text here..."></textarea>
+                    <div class="flex justify-between item-view h-5/6">
+                        <textarea class="w-full p-2 edit-area" id="longTextInput" rows="25" placeholder="Enter your long text here..."></textarea>
                     </div>
                     <div>
                         <button id="submitButton" class="bg-green-500 text-white p-2 editor-submit-btn">Submit</button>
@@ -60,11 +65,11 @@
     </div>
 
     <template id="listItemTemplate">
-        <div class="list-item overflow-hidden">
+        <div class="list-item ">
             <div class="top-row">
                 <span class="card-id font-bold"></span>
             </div>
-            <div class="content markdown-body h-20"></div>
+            <div class="content markdown-body h-20 overflow-hidden"></div>
         </div>
     </template>
     <template id="articleTemplate">
