--- a/resource/app/index.html
+++ b/resource/app/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script type="module" src="renderer/index.js"></script>
-    <link rel="stylesheet" href="renderer/style.css" />
+    <script type="module" src="./index.js"></script>
+    <link rel="stylesheet" href="./style.css" />
     <title>slippod</title>
 </head>
 <body>
