--- a/resource/app/index.html
+++ b/resource/app/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script type="module" src="./index.js"></script>
     <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./codemirror.css" />
     <title>slippod</title>
 </head>
 <body>
@@ -26,38 +26,15 @@
                     <div id="listView" ></div>
                 </div>
             </div>
-            <div class="w-full bg-gray-400 p-2 h-screen overflow-y-scroll" id="card-detail-container" card-id="">
-                <div class="textview hidden" id="card-view" >
-                    <div class="flex flex-col justify-between item-view">
-                        <div class="top-row border-b mb-3">
-                            <span class="card-id font-bold "></span>
-                            <span class="card-created-at text-gray-63 dark:text-gray-94 px-8"></span>
-                            <span class="card-updated-at text-gray-63 dark:text-gray-94"></span>
-                        </div>
-                        <div class="markdown-body"></div>
+            <div class="w-full bg-gray-400 p-2 h-screen overflow-y-hidden" id="card-detail-container" card-id="">
+                <div class="h-full" id="editor-view">
+                    <div class="top-row border-b mb-3">
+                        <span class="card-id font-bold "></span>
+                        <span class="card-created-at text-gray-63 dark:text-gray-94 px-8"></span>
+                        <span class="card-updated-at text-gray-63 dark:text-gray-94"></span>
                     </div>
-                    <div>
-                        <button class="bg-blue-500 text-white p-2 edit-btn">Edit</button>
-                        <button class="bg-red-500 text-white p-2 delete-btn">Delete</button>
-                    </div>
-                    <div class="grid gap-4 grid-cols-1">
-                        <h2 class="text-lg font-bold">Reference card</h2>
-                        <div class="card-references divide-y divide-slate-100">
-                        </div>
-                    </div>
-                    <div class="flex flex-col">
-                        <h2 class="text-lg font-bold">References By</h2>
-                        <div class="card-references-by divide-y divide-slate-100">
-                        </div>
-                    </div>
-                </div>
-                <div class="editor hidden" id="editor-view">
-                    <div class="flex justify-between item-view h-5/6">
-                        <textarea class="w-full p-2 edit-area" id="longTextInput" rows="25" placeholder="Enter your long text here..."></textarea>
-                    </div>
-                    <div>
-                        <button id="submitButton" class="bg-green-500 text-white p-2 editor-submit-btn">Submit</button>
-                        <button class="bg-gray-500 text-white p-2 editor-cancel-btn">Cancel</button>
+                    <div class="h-full w-full" id="editor-container">
+                        <textarea class="" id="longTextInput" rows="25" placeholder="Enter your long text here..."></textarea>
                     </div>
                 </div>
             </div>
@@ -82,4 +59,8 @@
         </div>
     </template>
 </body>
+<script  src="./codemirror.js"></script>
+<script  src="./codemirror_markdown.js"></script>
+<script  src="./emacs.js"></script>
+<script type="module" src="./index.js"></script>
 </html>
