--- a/resource/app/index.html
+++ b/resource/app/index.html
@@ -51,7 +51,7 @@
         <span class="id"></span>
         <span class="createTime"></span>
         <div class="content markdown-body"></div>
-        <button class="updateCardButton" class="hidden">Save</button>
+        <button class="updateCardButton hidden">Save</button>
     </template>
 </body>
 <script  src="./codemirror.js"></script>
