--- a/resource/app/index.html
+++ b/resource/app/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css" />
-    <link rel="stylesheet" href="./codemirror.css" />
-    <link rel="stylesheet" href="./show-hint.css" />
+    <link rel="stylesheet" href="./codemirror/codemirror.css" />
+    <link rel="stylesheet" href="./codemirror/show-hint.css" />
     <title>Slippod Sandbox</title>
 </head>
 <body>
@@ -50,11 +50,11 @@
         <button class="updateCardButton hidden">Save</button>
     </template>
 </body>
-<script  src="./codemirror.js"></script>
-<script  src="./codemirror_markdown.js"></script>
-<script  src="./overlay.js"></script>
-<script  src="./show-hint.js"></script>
-<script  src="./emacs.js"></script>
+<script  src="./codemirror/codemirror.js"></script>
+<script  src="./codemirror/codemirror_markdown.js"></script>
+<script  src="./codemirror/overlay.js"></script>
+<script  src="./codemirror/show-hint.js"></script>
+<script  src="./codemirror/emacs.js"></script>
 <script type="module" src="./index.js"></script>
 
 </html>
