--- a/resource/app/index.html
+++ b/resource/app/index.html
@@ -20,7 +20,7 @@
     </div>
     <div id="overlay" class="fixed inset-0 z-20 hidden"></div>
     <div id="main" class="md:pl-64">
-        <div id="topBar" class="fixed pt-10 md:ml-64 inset-x-0 z-10">
+        <div id="topBar" class="fixed pt-10 md:pt-[0.4rem] md:ml-64 inset-x-0 z-10">
             <button id="btnSideNav" class="md:hidden absolute left-2 bottom-0"></button>
             <div id="topBarContainer" class="w-full max-w-[68rem] mx-auto">
                 <button id="omniSearchButton" class="w-full">Quickly find notes, search for tags...</button>
