sidenav html & css refactor

--- a/resource/app/index.html
+++ b/resource/app/index.html
@@ -13,9 +13,19 @@
     <div id="sideNav" class="hidden md:block h-screen select-none fixed z-30">
         <div id="sideNavContainer">
             <ul id="sideNavUl">
-                <li class="tagClick"  href="/tag_all" id="allCards">All Cards</li>
-                <li class="tagClick" href="/tag_no" id="noTag">Untagged</li>
-                <li class="tagClick" href="/tag_trash" id="trashCards">Trash</li>
+                <li class="tagClick"  href="/tag_all" id="allCards">
+                    <span class="icon"></span>
+                    <span class="label">All Cards</span>
+                </li>
+                <li class="sep"></li>
+                <li class="tagClick" href="/tag_no" id="noTag">
+                    <span class="icon"></span>
+                    <span class="label">Untagged</span>
+                </li>
+                <li class="tagClick" href="/tag_trash" id="trashCards">
+                    <span class="icon"></span>
+                    <span class="label">Trash</span>
+                </li>
             </ul>
             <ul id="tagsList"></ul>
         </div>
